--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-Django~=4.0.4
+Django~=4.0.5
+redis~=4.2.2
 weasyprint~=54.3
 djangorestframework~=3.13.1
-yookassa==2.3.1
-celery~=5.2.6
-psycopg2~=2.9.3
-redis~=4.2.2
-django-debug-toolbar==3.4.0 # for dev
+yookassa~=2.3.1
+django-debug-toolbar~=3.4.0
+celery~=5.2.7
